# itmo-recommender-systems-course

./: .flake8  .gitignore  .pylintrc  Dockerfile  Makefile  docker-compose.yaml  pyproject.toml  readme.md  requirements.txt
.github/workflows/: linter_and_tests.yml
notebooks/: docker-compose.yaml  homework_2.ipynb  homework_3.ipynb  homework_4.ipynb  homework_5.ipynb  homework_6_data_preparing.ipynb  homework_6_feature_engineering.ipynb  homework_6_first_stage_models.ipynb  homework_6_second_stage_models.ipynb  homework_6_union_recommendations.ipynb  requirements.txt  user_knn.py  utils.py
src/: app.py  config.py  exceptions.py
src/api/: auth.py  dependencies.py  router.py  schemas.py
src/recommenders/: autoencoder_recommender.py  base_recommender.py  dssm_recommender.py  hnsw_lightfm_recommender.py  lightfm_recommender.py  random_recommender.py  recommender_register.py  two_stage_recommender.py  user_knn_recommender.py
tests/: conftest.py  test_auth.py  test_health.py  test_model.py  test_user.py
